--- a/index.html
+++ b/index.html
@@ -27,8 +27,9 @@
 
     <main class="container">
         <div id="box_game"></div>
-        <h1 id="title">Inizia il gioco!</h1>
-        <button id="refresh">Ricomincia</button>
+        <h1 id="title">Benvenuto in Campo SfIorito, la versione cheap e non funzionante del celebre gioco "Campo Fiorito" attendete che impari di più di Js e potrò riprodurlo veramente. Le regole non ve le dico, tanto non ci sono. Cliccate e sperate di non pestare na bomba!</h1>
+        <p id="joke">p.s. per iniziare il gioco scegli difficoltà e clicca "Play"</p>
+        <button id="refresh" class="remove">Ricomincia</button>
     </main>
 
     <footer>
